# workspaces/linguist/plugins/linguist-backend/src/schema/openapi.generated.ts
@@ -37,9 +37,11 @@ export const spec = {
       url: '/',
     },
   ],
+  security: [{ BearerAuth: [] }],
   paths: {
     '/health': {
       get: {
+        security: [],
         description: 'Checks if the linguist backend is hooked up properly',
         responses: {
           '200': {
@@ -100,6 +102,13 @@ export const spec = {
     headers: {},
     parameters: {},
     requestBodies: {},
+    securitySchemes: {
+      BearerAuth: {
+        type: 'http',
+        scheme: 'bearer',
+        description: 'Backstage user or service token',
+      },
+    },
     responses: {
       ServerError: {
         description: 'Error',
