# workspaces/linguist/plugins/linguist-backend/src/schema/openapi.yaml
@@ -9,9 +9,12 @@ info:
   contact: {}
 servers:
   - url: /
+security:
+  - BearerAuth: []
 paths:
   /health:
     get:
+      security: []
       description: Checks if the linguist backend is hooked up properly
       responses:
         '200':
@@ -48,6 +51,11 @@ components:
   headers: {}
   parameters: {}
   requestBodies: {}
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      description: Backstage user or service token
   responses:
     ServerError:
       description: Error
